--- a/man/sv/dselect.8
+++ b/man/sv/dselect.8
@@ -1,4 +1,4 @@
-.\" Translation of CVS revision 1.8
+.\" Translation of CVS revision 1.8.2.2
 .TH DSELECT 8 "Juli 2001" "Debianprojektet" "Debian"
 .SH NAMN
 dselect \- Debians pakethanteringssystem
@@ -9,7 +9,7 @@ dselect \- Debians pakethanteringssystem
 [\-\-colour | \-\-color skärmdel:[förgrund],[bakgrund][:attr[+attr+..]]]
 .SH BESKRIVNING
 .B dselect
-är det primära användargränssnittet för att hantera paket på ett
+är ett av det primära användargränssnitten för att hantera paket på ett
 Debiansystem.
 I \fBdselect\fPs huvudmeny kan systemadministratören:
  \- Uppdatera listan över tillgängliga paketversioner,
@@ -437,9 +437,6 @@ Paketvalsgränssnittet i
 är förvirrande för en del nya användare.
 Det har rapporterats att det till och med kan få erfarna utvecklare
 av kärnan att gråta.
-.sp
-.B dselect
-hanterar inte Recommends:-fältet speciellt bra.
 .sp
 Dokumentationen har brister.
 .sp
