--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 24 21:51:55 CEST 2004 Jordi Mallach <jordi@debian.org>
+
+  * po/ca.po: Updated Catalan translation.
+
 Mon Jul 19 20:17:09 BST 2004 Scott James Remnant <scott@netsplit.com>
 
   * version-nr, debian/changelog: Bump version to 1.10.24.
