dpkg (1.10.25) unstable; urgency=low
  The "你他媽的天下所有的人都該死" Release.

  This release is to correct the mangled Simplified Chinese translation
  included in 1.10.24 caused by rebellion of the translator's mail client.

  * Updated Translations (Christian Perrier):
    - Dutch (Bart Cornelis).  Closes: #278700.
    - Polish (Bartosz Fenski).  Closes: #280406.
    - Simplified Chinese (Tchaikov, Carlos Liu).  Closes: #278676.

 -- Scott James Remnant <scott@netsplit.com>  Thu, 11 Nov 2004 20:06:57 +0000

--- a/po/nl.po
+++ b/po/nl.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.9.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-10-27 09:08+0000\n"
-"PO-Revision-Date: 2004-10-24 16:59+0100\n"
+"POT-Creation-Date: 2004-11-11 20:10+0000\n"
+"PO-Revision-Date: 2004-10-28 22:01+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -53,74 +53,74 @@ msgid "Signal no.%d"
 msgstr "Signaal nr. %d"
 
 #: lib/compression.c:45
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne gzip fout `%s'"
 
 #: lib/compression.c:60
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip -dc"
-msgstr "afsluiten 'gzip -dc' is mislukt"
+msgstr "%s: uitvoeren van 'gzip -dc' is mislukt"
 
 #: lib/compression.c:76
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne bzip2 fout `%s'"
 
 #: lib/compression.c:91
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 -dc"
-msgstr "afsluiten 'gzip -dc' is mislukt"
+msgstr "%s: uitvoeren van  'bzip2 -dc' is mislukt"
 
 #: lib/compression.c:94
 #, c-format
 msgid "%s: decompression"
-msgstr ""
+msgstr "%s: decompressie"
 
 #: lib/compression.c:128
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: read: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne gzip fout: read: `%s'"
 
 #: lib/compression.c:138
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal gzip error: write: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne gzip fout: write: `%s'"
 
 #: lib/compression.c:141
 #, c-format
 msgid "%s: internal gzip error: read(%i) != write(%i)"
-msgstr ""
+msgstr "%s: interne gzip fout: read(%i) != write(%i)"
 
 #: lib/compression.c:157
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec gzip %s"
-msgstr "kon %s niet uitvoeren"
+msgstr "%s: uitvoeren van gzip %s is mislukt"
 
 #: lib/compression.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: read: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne bzip2 fout: read: `%s'"
 
 #: lib/compression.c:181
-#, fuzzy, c-format
+#, c-format
 msgid "%s: internal bzip2 error: write: `%s'"
-msgstr "%s:%d: interne fout `%s'\n"
+msgstr "%s: interne bzip2 fout: write `%s'"
 
 #: lib/compression.c:184
 #, c-format
 msgid "%s: internal bzip2 error: read(%i) != write(%i)"
-msgstr ""
+msgstr "%s: interne bzip2 fout: read(%i) != write(%i)"
 
 #: lib/compression.c:200
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec bzip2 %s"
-msgstr "kon %s niet uitvoeren"
+msgstr "%s: uitvoeren van bzip2 %s is mislukt"
 
 #: lib/compression.c:203
 #, c-format
 msgid "%s: compression"
-msgstr ""
+msgstr "%s: compressie"
 
 #: lib/database.c:125
 #, c-format
@@ -1583,11 +1583,11 @@ msgstr " is in strijd met "
 
 #: main/depcon.c:157
 msgid " suggests "
-msgstr " suggereert"
+msgstr " suggereert "
 
 #: main/depcon.c:158
 msgid " enhances "
-msgstr " verbetert"
+msgstr " verbetert "
 
 #: main/depcon.c:234
 #, c-format
@@ -2598,7 +2598,7 @@ msgstr "  Pakket "
 
 #: main/packages.c:270 main/packages.c:314 main/packages.c:327
 msgid " which provides "
-msgstr " die voorziet in"
+msgstr " die voorziet in "
 
 #: main/packages.c:273
 msgid " is to be removed.\n"
@@ -3170,7 +3170,7 @@ msgstr "' beheerprogramma voor pakketten versie\n"
 #: main/query.c:448
 #, c-format
 msgid "Usage: "
-msgstr "Gebruik:"
+msgstr "Gebruik: "
 
 #: main/query.c:449
 #, c-format
@@ -3272,7 +3272,7 @@ msgstr ""
 #: dpkg-deb/build.c:217
 msgid "package name has characters that aren't lowercase alphanums or `-+.'"
 msgstr ""
-"pakketnaam heeft tekens die niet kleine letters of cijfers of '-+.' zijn."
+"pakketnaam heeft tekens die niet kleine letters of cijfers of '-+.' zijn"
 
 #: dpkg-deb/build.c:219
 #, c-format
@@ -3647,7 +3647,7 @@ msgid ""
 "Perhaps you should be using dpkg --install ?"
 msgstr ""
 "--%s heeft een doelmap nodig.\n"
-"Misschien heeft u dpkg --install nodig?"
+"Misschien heeft u 'dpkg --install' nodig?"
 
 #: dpkg-deb/extract.c:322
 #, c-format
@@ -4097,7 +4097,7 @@ msgstr ""
 
 #: split/main.c:70
 msgid "Type dpkg-split --help for help."
-msgstr "Type dpkg-split --help voor hulp.c"
+msgstr "Type dpkg-split --help voor hulp."
 
 #: split/main.c:80
 #, c-format
@@ -4335,7 +4335,7 @@ msgstr "Zoeken naar ? "
 
 #: dselect/basecmds.cc:143
 msgid "Error: "
-msgstr "Fout"
+msgstr "Fout: "
 
 #: dselect/basecmds.cc:171
 msgid "Help: "
@@ -4357,7 +4357,7 @@ msgid ""
 "  or <space> to read each help page in turn. "
 msgstr ""
 "Druk op een van de toetsen hierboven, Spatie om te beëindigen,\n"
-"  of `.' (punt) om alle pagina's een voor een te lezen."
+"  of `.' (punt) om alle pagina's een voor een te lezen. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -4698,7 +4698,7 @@ msgstr "[E]inde"
 
 #: dselect/main.cc:145
 msgid "Quit dselect."
-msgstr "dselect afsluiten"
+msgstr "dselect afsluiten."
 
 #: dselect/main.cc:146
 msgid "menu"
